# Lesson2

./: .gitignore  config.py  main.py  pyproject.toml
src/: category.py  iterator.py  lawnGrass.py  product.py  smartphone.py  utils.py
tests/: conftest.py  test_category.py  test_lawnGrass.py  test_product.py  test_smartphone.py
